--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Scissors Paper - Game</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel=“stylesheet" />
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" /> -->
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&amp;subset=latin-ext" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/c341fb2337.js"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h3 class="text-center">
+        <h2 class="text-center">
             Welcome to the Game <br>
             <span class="label label-default btnRock">Rock</span>
             <span class="label label-info btnPaper">Paper</span>
             <span class="label label-danger btnScissors">Scissors</span>
-        </h3>
+        </h2>
     </div>
     <div id="js-newGameElement" class="container">
         <div class="row text-center">
@@ -35,18 +38,18 @@
     </div>
     <div id="js-playerPickElement" class="container">
         <div class="row text-center">
-            <button id="js-playerPick_rock" class="btn btnRock">
+            <button class="btn btnOption" data-name="rock">
                 <span class="badge">
-                    <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
+                        <i class="far fa-hand-rock"></i>
 
                 </span>
             </button>
-            <button id="js-playerPick_paper" class="btn btnPaper">
+            <button class="btn btnOption" data-name="paper">
                 <span class="badge">
                     <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
                 </span>
             </button>
-            <button id="js-playerPick_scissors" class="btn btnScissors">
+            <button class="btn btnOption" data-name="scissors">
                 <span class="badge">
                     <i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
                 </span>
@@ -65,7 +68,7 @@
                 </span>
             </div>
             <div class="col-xs-6 text-center">
-                VS.
+                
             </div>
             <div class="col-xs-3 text-center">
                 <span id="js-computerPoints" class="badge">
