check style.css error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Musa Bagci">
     <meta name=escription content="Rock Scissors Paper - Game">
-    <meta name="keywords" content="HTML, JavaScript, Kodilla, frontend, project">
+    <meta name="keywords" content="HTML, JavaScript, frontend, project">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Scissors Paper - Game</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
